syntax = "proto3";
package proto;


service IMService {
	rpc Ping (PingReq) returns (PingRes) {
	}

	rpc PushMsg (PushMsgReq) returns (PushMsgRes) {
	}

	rpc PushMsgs (PushMsgsReq) returns (PushMsgsRes) {
	}

}

message PingReq {
	int64 id = 1;
}

message PingRes {
	bool status = 1;
}


message PushMsgReq {
	int64 id = 1;
	int64 sid = 2; //send id
	bytes msg = 3;
}

message PushMsgRes {
	bool status = 1;
}

message PushMsgsReq {
	int64 id = 1;
	int64 sid = 2;
	bytes msg = 3;
}

message PushMsgsRes {
	bool status = 1;
}

